cli/tests/testdata/workers/worker_async_error.ts.out
error: Uncaught (in worker "foo") (in promise) Error: bar
  throw new Error("bar");
        ^
    at [WILDCARD]/async_error.ts:[WILDCARD]
    at [WILDCARD]/async_error.ts:[WILDCARD]
error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl [WILDCARD]
